--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~13.2.2",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -25,7 +26,10 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage-angular": "^3.0.6",
+    "animate.css": "^4.1.1",
     "rxjs": "~6.6.0",
+    "swiper": "^8.1.5",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
