--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage-angular": "^3.0.6",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "animate.css": "^4.1.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.1.5",
